# This file is part of the RobinHood project
# Copyright (C) 2022 Commissariat a l'energie atomique et aux energies
#                    alternatives
#
# SPDX-License-Identifer: LGPL-3.0-or-later

install_headers(
    'actions.h',
    'core.h',
    'filters.h',
    'parser.h',
    'rbh-find.h',
    'utils.h',
    subdir: 'rbh-find'
)
