# This file is part of the RobinHood Library
# Copyright (C) 2019 Commissariat a l'energie atomique et aux energies
# 		      alternatives
#
# SPDX-License-Identifer: LGPL-3.0-or-later
#
# author: Dominique Martinet <dominique.martinet@cea.fr>
# author: Quentin Bouget <quentin.bouget@cea.fr>

install_headers('backend.h',
		'filter.h',
		'fsentry.h',
		'fsevent.h',
		'id.h',
		'iterator.h',
		'itertools.h',
		'plugin.h',
		'queue.h',
		'ring.h',
		'statx.h',
		'sstack.h',
		'stack.h',
		'uri.h',
		'utils.h',
		subdir: 'robinhood')

subdir('backends')
subdir('plugins')
